Удалены пробелы и неиспользуемые методы.
